<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#1b2e2c"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected"
            android:textColor="@color/white"
            android:gravity="center_horizontal"

            android:textSize="14sp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_none"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:id="@+id/tv_sel"
            android:textSize="14sp"

            />

    </LinearLayout>



    <TextView
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:id="@+id/tv_welcome"
        android:textSize="18sp"

      />

    <TextView
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:text="@string/one"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@color/but"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_welcome"
        android:layout_marginTop="50dp"
        android:id="@+id/one"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:text="@string/tex"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@color/but2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/one"
        android:layout_marginTop="50dp"
        android:id="@+id/two"
        android:textSize="18sp"
        />
</RelativeLayout>
